KSENROLL-12779 - Manage CO Screen Course Title alignment off - Fixed
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@69271 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
@@ -2056,6 +2056,10 @@ table.dataTable tr.even td.sorting_1 {
   background-color: #fffeda;
 }
 
+#KS-CourseOffering-Title .uif-label{
+  display: initial;
+}
+
 /*
   Positioning the meta-data on top of the dataTable causes the table showing on the right on some browsers.
   Float left to show on the left.
